# G_PAC-SPP_TEST

./: .gitignore  BG2_16_6_14.txt  G_PAC.txt  G_SPP.txt  README.md
PAC结果/: 16.txt  18.txt  20.txt  22.txt  results.txt
SPP结果/: 16.txt  18.txt  20.txt  22.txt  results.txt
basic/: CMakeLists.txt  main.cu
comb/: main.cu
random/: CMakeLists.txt  main.cu
remove/: CMakeLists.txt  main.cu
reverse/: BCH_255_223_H.txt  BG2_16_6_14_copy.txt  main.cu
shift/: main.cu
